Cleanup frontend, candidate ratings endpoint
