# backend/api/routes.go
@@ -10,6 +10,8 @@ func SetupRoutes(router *gin.Engine) {
 	api := router.Group("/api")
 	{
 		api.GET("/rating-cards", handlers.GetRatingCards)
+
+		api.GET("/ratings/candidate", handlers.GetCandidateRatings)
 		
 		api.POST("/ratings/save", handlers.SaveRatingRequest)
 	}
